// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Prototypes/StatusBar Status Bar 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="status-bar grid grid-cols-4 gap-4"
  >
    <div
      className="status-bar__note col-span-3"
    />
    <div
      className="status-bar__status"
    >
      <Tag
        pillStyle={true}
      >
        <div
          className="tag is-pill"
        >
          Draft
        </div>
      </Tag>
    </div>
  </div>
</div>
`;

exports[`Storyshots Prototypes/StatusBar Status Bar Submitted 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="status-bar grid grid-cols-4 gap-4"
  >
    <div
      className="status-bar__note col-span-3"
    >
      Lottery ranking generated. 07/15/2020 at 11:45am 
      <span
        className="status-bar__action"
      >
        <a
          className="underline"
          href="#"
        >
          Status History
        </a>
      </span>
    </div>
    <div
      className="status-bar__status"
    >
      <Tag
        pillStyle={true}
        success={true}
      >
        <div
          className="tag is-success is-pill"
        >
          Success
        </div>
      </Tag>
    </div>
  </div>
</div>
`;
